<resources>
    <string name="app_name">Jetpack Submission 3</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="content_image">Image</string>
    <string name="date">Date</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="language">Language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorites">Favorites</string>
</resources>
