...
        android:gravity="center"
        android:text="@string/movies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/rb_shows"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_toggle_film"
        android:button="@null"
        android:gravity="center"
        android:text="@string/tv_shows"
        app:layout_constraintStart_toEndOf="@+id/rb_movies"
        app:layout_constraintTop_toTopOf="@+id/rb_movies" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
